2014-12-01  Glenn Morris  <rgm@gnu.org>

	* gnus-cloud.el (gnus-cloud): Add :version tag.

2014-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-use-idna):
	* gnus-sum.el (gnus-summary-idna-message):
	* message.el (message-use-idna):
	Protect against nil value for idna-program.

	* message.el (message-use-idna): Load Mule-UCS for XEmacs 21.4.

2014-11-26  John Mastro  <john.b.mastro@gmail.com>  (tiny change)

	* auth-source.el (auth-source-macos-keychain-search-items): Return
	result of `auth-source-macos-keychain-result-append' (bug#19074).

2014-11-25  Glenn Morris  <rgm@gnu.org>

	* gnus-start.el (gnus-save-newsrc-file-check-timestamp):
	Add :version tag.

2014-11-23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* pop3.el (pop3-open-server): Warn unless encrypted.

	* nnimap.el (nnimap-open-connection-1): Warn unless encrypted.

2014-11-18  Paul Eggert  <eggert@cs.ucla.edu>

	Port new time stamp handling to Emacs 23.2.
	This fix is for Gnus.  Problem reported by Katsumi Yamaoka.
	* time-date.el (time-add, time-subtract, time-less-p):
	Use eval-and-compile, not eval-when-compile.

2014-11-17  Albert Krewinkel  <albert@zeitkraut.de>

	* message.el (message-valid-fqdn-regexp): Add non-internaional new
	TLDs.

2014-11-17  Paul Eggert  <eggert@cs.ucla.edu>

	Port new time stamp handling to old Emacs and to XEmacs.
	This is needed for Gnus, which copies time-date.el and which
	runs on older Emacs implementations.
	* time-date.el (with-decoded-time-value):
	Handle 'nil' and floating-point arg more compatibly with new Emacs.
	(encode-time-value, with-decoded-time-value):
	Obsolete only if new Emacs.
	(time-add, time-subtract, time-less-p): Define if not new Emacs.

	Improve time stamp handling, and be more consistent about it.
	This implements a suggestion made in:
	http://lists.gnu.org/archive/html/emacs-devel/2014-10/msg00587.html
	Among other things, this means timer.el no longer needs to
	autoload the time-date module.